Error: No conseguir el correo del usuario registrado en el cliente ligero

--- a/public/apiclient/index.html
+++ b/public/apiclient/index.html
@@ -27,7 +27,7 @@
       </div>
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav" id="barra-menu">
-          <li><a onclick=widgetOffers()>Canciones</a></li>
+          <li><a onclick=widgetOffers()>Ofertas</a></li>
           <li><a onclick=widgetChats()>Conversaciones</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right" id="barra-menu-derecha">
