--- a/public/apiclient/widget-login.html
+++ b/public/apiclient/widget-login.html
@@ -20,9 +20,7 @@
   </div>
 </div>
 <script>
-  var userEmail
-
-  $("#boton-login").click(function() {
+    $("#boton-login").click(function() {
     $.ajax({
       url: URLbase + '/users/login',
       type: 'POST',
@@ -32,9 +30,8 @@
       },
       dataType: 'json',
       success: function(response) {
-        token = response.token
-        userEmail = response.email
-        Cookies.set('token', response.token);
+        token = response.data.token
+        Cookies.set('token', response.data.token);
         $('#main-container').load('widget-offers.html')
       },
       error: function(error) {
