--- a/sdi2223-entrega2-63/public/apiclient/widget-messages.html
+++ b/sdi2223-entrega2-63/public/apiclient/widget-messages.html
@@ -15,7 +15,6 @@
     <tbody id="messagesTableBody"></tbody>
   </table>
 
-  <form class="form-horizontal">
     <div class="form-group">
       <label class="control-label col-sm-2" for="newMsg">Nuevo Mensaje:</label>
       <div class="col-sm-10">
@@ -24,10 +23,10 @@
     </div>
     <div class="form-group">
       <div class="col-sm-offset-2 col-sm-10">
-        <button type="submit" id="btn-submit" class="btn btn-primary">Enviar</button>
+        <button type="button" id="btn-submit" class="btn btn-primary">Enviar</button>
       </div>
     </div>
-  </form>
+
 </div>
 
 <script>
@@ -72,6 +71,7 @@
       url: URLbase + "/conversations/" + selectedConversationsId +"/new",
       type: "POST",
       data: {
+        converId: selectedConversationsId,
         content: $('#newMsg').val()
       },
       dataType: 'json',
