TODO FUNCIONANDO (menos la proteccion de las conversaciones)

--- a/sdi2223-entrega2-63/public/apiclient/widget-chats.html
+++ b/sdi2223-entrega2-63/public/apiclient/widget-chats.html
@@ -44,7 +44,7 @@
             $("#conversationsTableBody").append(
                 "<tr id=" + conversations[i]._id + ">" +
                 "<td>" + conversations[i].buyer + "</td>" +
-                "<td>" + conversations[i].offer + "</td>" +
+                "<td>" + conversations[i].offerTitle + "</td>" +
                 "<td>" +
                 "<a onclick=conversationsDetails('" + conversations[i]._id + "')>Mensajes</a><br>" +
                 "<a onclick=conversationsDelete('" + conversations[i]._id + "')>Eliminar</a>" +
