--- a/sdi2223-entrega2-63/public/apiclient/widget-newMessages.html
+++ b/sdi2223-entrega2-63/public/apiclient/widget-newMessages.html
@@ -24,6 +24,7 @@
       type: "POST",
       data: {
         offer: offerID,
+        offerTitle: offerTitle,
         content: $('#newMsgNoConv').val()
       },
       dataType: 'json',
